# JEM

./: .gitignore  OSM_extract.geojson  README.md  environment.yml  jem_model.txt  pyproject.toml
__pycache__/: Work - Shortcut.lnk
_gpkg/: README.txt
infrasim/: meta.py  model.py  params.py  plotting.py  spatial.py  utils.py
jem/: analyse.py  meta.py  model.py  params.py  utils.py
linux/: computation_times.xlsx
notebook/: demo-pypsa.ipynb  demo.ipynb  jem-demo.ipynb  looped-attack-demo.py
outputs/: sink_impact_assessment.csv
qgis/: JEM.qgz
scripts/: 001-create-and-intersect-wgrid.py  002-multi-edge-node-failure.py  003-economic-activity-multi-edge-node-failure.py  004-export-data-as-raster-grid.py  004-export-economic-activity-as-raster-grid.py  create_cost_curves.py  create_toplogy.py  merge_cost_data.py  readme.md  run_002_chunks.sh
src/: 001-create-and-intersect-wgrid.py  002-multi-edge-node-failure.py  002a-merge-output-files.py  003a-export-data-as-raster-grid.py  003b-economic-activity-multi-edge-node-failure.py  Untitled.ipynb  create_cost_curves.py  create_flow_data.py  create_toplogy.py  create_topology_nb.ipynb  create_unit_cost_data.py  electricity_demand_assignment.py  environment-check.py  estimate_capacity_attributes.py  gis_model_energy_demand.py  map_demand_with_voronoi.py  map_water_assets.py  merge_cost_data.py  merge_elec_consumption_data.py  single_point_failure_postprocess.py  utils.py  voronoi_clipping.ipynb  water_mapping.ipynb
tests/: 22_plots.py  add_capacity_attributes.py  adjust-components.py  check-flow-data.py  check_join.py  check_speed.py  create_toplogy.py  (+6 more)
(+44 files in other folders)
